button gap fixed for mobile modal

--- a/webapp/channels/src/sass/components/_modal.scss
+++ b/webapp/channels/src/sass/components/_modal.scss
@@ -137,7 +137,11 @@
     }
 
     .modal-footer {
+        display: flex;
         background: var(--center-channel-bg);
+        flex-wrap: wrap;
+        justify-content: end;
+        grid-row-gap: 8px;
 
         &.modal-footer--invisible {
             overflow: hidden;
